src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A36.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A36 {
  class A;
  class B;
  class C;
 
  association A -- B;
  association C -- A;
}
